Modified vue-clazy-loading to avoid flickering

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -667,6 +667,10 @@ ul.player-list {
 	padding-top: 5px;
 	padding-left: 5px;
 	background-color: rgba(0, 0, 0, 0.25);
+	-webkit-user-select: none; 
+	-moz-user-select: none;  
+	-ms-user-select: none;  
+	user-select: none;   
 }
 
 .card-container {
@@ -795,11 +799,11 @@ ul.player-list {
 }
 
 /* No :hover outside of the div bounds */
-.cmc-column div > div {
+.cmc-column > div > div {
 	pointer-events: none;
 }
 /* Except if its fully visible */ 
-.cmc-column div:last-child > div {
+.cmc-column > div:last-child > div {
 	pointer-events: auto;
 }
 
